--- a/app/src/main/res/layout/activityt_book.xml
+++ b/app/src/main/res/layout/activityt_book.xml
@@ -8,25 +8,37 @@
         layout="@layout/layout_head_title"
         />
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/add_la"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:background="@drawable/right_bg_button"
+        android:background="@drawable/ssy_tjydbg"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/tv_add"
-        android:layout_gravity="center_horizontal"
-        android:text="+ 添加预订信息"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginBottom="2dp">
+        <TextView
+
+            android:textSize="16sp"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:textColor="@color/white"
+            android:background="@drawable/right_bg_button"
+            android:layout_centerInParent="true"
+            android:id="@+id/tv_add"
+            android:layout_gravity="center_horizontal"
+            android:text="+ 添加预订信息"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+
+    </RelativeLayout>
+
     <com.common.api.widget.pulltorefresh.library.PullToRefreshListView
         xmlns:ptr="http://schemas.android.com/apk/res-auto"
         ptr:ptrOrientationMode = "vertical"
         android:layout_below="@id/top"
-        android:layout_above="@id/tv_add"
+        android:layout_above="@id/add_la"
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
