--- a/app/src/main/res/layout/activity_add_book_layout.xml
+++ b/app/src/main/res/layout/activity_add_book_layout.xml
@@ -86,6 +86,13 @@
                             android:drawableLeft="@drawable/ico_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/la_d"
+                            android:layout_marginLeft="20dp"
+                            android:textColor="@color/app_red_color"
+                            android:text="( 必填 )"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
                 </LinearLayout>
