--- a/app/src/main/res/layout/include_customer_ticket.xml
+++ b/app/src/main/res/layout/include_customer_ticket.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
+    android:layout_height="wrap_content"
     android:background="#F6F3EE"
     android:orientation="vertical">
     <View
@@ -38,13 +37,26 @@
             android:text="添加"
             android:textColor="@color/colorPrimaryDark" />
     </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_history_hint"
+        android:text="请添加就餐小票,更好了解客户喜好"
+        android:paddingBottom="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <LinearLayout
+        android:id="@+id/ll_ticket_image"
+        android:visibility="gone"
+        android:orientation="vertical"
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_ticket_border"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <ImageView
+
             android:scaleType="centerCrop"
             android:id="@+id/iv_spend_history"
             android:src="@drawable/empty_slide"
