--- a/app/src/main/res/layout/header_view_user_info.xml
+++ b/app/src/main/res/layout/header_view_user_info.xml
@@ -289,6 +289,7 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/la_a"
             android:paddingLeft="15dp"
             android:textSize="15sp"
             android:textColor="@color/app_gray"
