--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -143,7 +143,7 @@
                     android:textSize="15sp"
                     android:textColor="@color/color_text_black"
                     android:padding="15dp"
-                    android:text="以下为选填内容 （可不填）"
+                    android:text="以下为选填内容"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <LinearLayout
@@ -212,9 +212,9 @@
                     <TextView
                         android:id="@+id/tv_con_ability"
                         android:layout_marginLeft="10dp"
-                        android:drawablePadding="10dp"
+                        android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:text="请选择消费能力"
+                        android:text="标记客户消费能力（人均）"
                         android:textSize="15sp"
                         android:textColor="@color/app_gray"
                         android:drawableLeft="@drawable/ico_spend_ability"
@@ -244,7 +244,7 @@
                         android:layout_marginLeft="15dp"
                         android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:text="请选择生日"
+                        android:text="记录客户生日"
                         android:textColor="@color/app_gray"
                         android:textSize="15sp"
                         android:drawableLeft="@drawable/ico_birth"
@@ -274,7 +274,7 @@
                         android:background="@color/transparent"
                         android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:hint="请输入籍贯"
+                        android:hint="记录客户籍贯"
                         android:textColorHint="@color/app_gray"
                         android:textColor="@color/color_222222"
                         android:textSize="15sp"
@@ -302,7 +302,7 @@
                         android:background="@color/transparent"
                         android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:hint="请输入发票信息"
+                        android:hint="记录客户发票信息"
                         android:textColorHint="@color/app_gray"
                         android:textColor="@color/color_222222"
                         android:drawableLeft="@drawable/ico_ticket"
