--- a/app/src/main/res/layout/activityt_book.xml
+++ b/app/src/main/res/layout/activityt_book.xml
@@ -37,7 +37,7 @@
             android:layout_centerInParent="true"
             android:id="@+id/tv_add"
             android:layout_gravity="center_horizontal"
-            android:text="+ 新增预订信息"
+            android:text="+ 添加预定信息"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
 
