--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -241,7 +241,7 @@
             android:layout_marginTop="70dp"
             android:id="@+id/tv_add"
             android:layout_gravity="center_horizontal"
-            android:text="+ 新增预订信息"
+            android:text="+ 添加预定信息"
             android:layout_width="200dp"
             android:layout_height="wrap_content" />
 
