--- a/app/src/main/res/layout/header_view_user_info.xml
+++ b/app/src/main/res/layout/header_view_user_info.xml
@@ -241,6 +241,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:paddingTop="10dp"
+            android:hint="请记录客户其他信息"
             android:text=""
             android:textSize="15sp" />
     </RelativeLayout>
