--- a/app/src/main/res/layout/include_customer_info.xml
+++ b/app/src/main/res/layout/include_customer_info.xml
@@ -41,6 +41,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:maxLength="20"
                 android:id="@+id/et_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
