--- a/app/src/main/res/layout/header_view_user_info.xml
+++ b/app/src/main/res/layout/header_view_user_info.xml
@@ -196,7 +196,7 @@
                 android:paddingRight="15dp"
                 android:paddingTop="10dp"
                 android:visibility="gone"
-                android:text="选择或输入客人信息后，可以进行标签管理" />
+                android:text="请记录客人喜好" />
         </FrameLayout>
 
 
