--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -214,7 +214,7 @@
                         android:layout_marginLeft="15dp"
                         android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:text="标记客户消费能力（人均）"
+                        android:hint="标记客户消费能力（人均）"
                         android:textSize="15sp"
                         android:textColor="@color/app_gray"
                         android:drawableLeft="@drawable/ico_spend_ability"
@@ -244,7 +244,7 @@
                         android:layout_marginLeft="15dp"
                         android:drawablePadding="15dp"
                         android:gravity="center_vertical"
-                        android:text="记录客户生日"
+                        android:hint="记录客户生日"
                         android:textColor="@color/app_gray"
                         android:textSize="15sp"
                         android:drawableLeft="@drawable/ico_birth"
