--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -89,6 +89,7 @@
                             android:layout_marginBottom="10dp"
                             android:background="@color/divider_list" />
                         <EditText
+                            android:inputType="number"
                             android:maxLength="20"
                             android:id="@+id/et_second_mobile"
                             android:textSize="14sp"
