--- a/app/src/main/res/drawable/bg_solid_corner_white.xml
+++ b/app/src/main/res/drawable/bg_solid_corner_white.xml
@@ -4,5 +4,5 @@
     <stroke
         android:width="1px"
         android:color="#ebebeb"></stroke>
-    <solid android:color="@color/white" />
+    <solid android:color="@color/color_f6f2ed" />
 </shape>
