--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -123,6 +123,7 @@
     <color name="color_bottom_text">#616161</color>
     <color name="color_bottom_bg">#F6F2ED</color>
     <color name="color_14b2fc">#14b2fc</color>
+    <color name="color_ece6de">#ece6de</color>
 
 
 </resources>
