--- a/app/src/main/res/color/bg_text_selector.xml
+++ b/app/src/main/res/color/bg_text_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/white" android:state_pressed="true" />
     <item android:color="@color/white" android:state_checked="true" />
-    <item android:color="@color/color_ff783e" android:state_checked="false" />
-    <item android:color="@color/color_ff783e" android:state_pressed="true" />
-    <item android:color="@color/color_ff783e" />
+    <item android:color="@color/colorPrimaryDark" android:state_checked="false" />
+    <item android:color="@color/colorPrimaryDark" android:state_pressed="true" />
+    <item android:color="@color/colorPrimaryDark" />
 </selector>
