--- a/app/src/main/res/drawable/bg_hollow_corner_red.xml
+++ b/app/src/main/res/drawable/bg_hollow_corner_red.xml
@@ -3,5 +3,5 @@
     <corners android:radius="5dp"></corners>
     <stroke
         android:width="2px"
-        android:color="@color/color_red_light"></stroke>
+        android:color="@color/colorPrimaryDark"></stroke>
 </shape>
