--- a/app/src/main/res/drawable/bg_pro_onekey_enable.xml
+++ b/app/src/main/res/drawable/bg_pro_onekey_enable.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="5dp"></corners>
     <solid
-        android:color="@color/color_ff783e"
+        android:color="@color/colorPrimaryDark"
         />
 </shape>
