--- a/app/src/main/res/layout/activity_photo_select.xml
+++ b/app/src/main/res/layout/activity_photo_select.xml
@@ -28,7 +28,7 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/top_height"
             android:layout_alignParentTop="true"
-            android:background="@color/title_bg">
+            android:background="@color/colorPrimaryDark">
 
             <ImageView
                 android:id="@+id/iv_back"
@@ -50,7 +50,7 @@
                 android:button="@null"
                 android:drawablePadding="10dp"
                 android:drawableRight="@drawable/checkbox_selector"
-                android:textColor="#D48A2C"
+                android:textColor="@color/white"
                 android:text="全选" />
             <LinearLayout
                 android:gravity="center"
@@ -69,7 +69,7 @@
                     android:maxEms="6"
                     android:maxLines="1"
                     android:text="幻灯片名"
-                    android:textColor="#D48A2C"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/title_text_size" />
 
                 <TextView
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="(0/50)"
-                    android:textColor="#D48A2C"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/title_text_size" />
             </LinearLayout>
 
