--- a/app/src/main/res/layout/activity_slide.xml
+++ b/app/src/main/res/layout/activity_slide.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_slide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f5f5f5"
+    android:background="@color/color_ece6de"
     android:orientation="vertical">
 
     <include layout="@layout/layout_head_title"/>
@@ -39,7 +39,7 @@
             android:padding="5dp"
             android:text="去创建"
             android:textSize="17sp"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:background="@drawable/bg_hollow_corner_red"
             />
 
