--- a/app/src/main/res/layout/include_slide_detail.xml
+++ b/app/src/main/res/layout/include_slide_detail.xml
@@ -9,7 +9,7 @@
         android:id="@+id/gv_picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f5f5f5"
+        android:background="@color/color_ece6de"
         android:divider="@android:color/transparent"
         android:fadingEdge="none"
         android:horizontalSpacing="1dp"
@@ -47,7 +47,7 @@
             android:drawablePadding="10dp"
             android:text="全选"
             android:textSize="@dimen/large_text_size"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:visibility="gone" />
         <TextView
             android:background="@color/pro_bg"
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/large_text_size"
             android:drawableLeft="@drawable/tianjia"
             android:drawablePadding="3dp"
