--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -62,7 +62,7 @@
             android:gravity="center"
             android:textSize="16sp"
             android:text="确定"
-            android:textColor="@color/head_title_text"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
