--- a/app/src/main/res/layout/slide_footer_layout.xml
+++ b/app/src/main/res/layout/slide_footer_layout.xml
@@ -3,7 +3,7 @@
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:gravity="center"
-android:background="#f5f5f5"
+android:background="@color/color_ece6de"
 android:orientation="vertical" >
 <TextView
     android:id="@+id/tv_load_hint"
