--- a/app/src/main/res/drawable/bg_solid_corner_red.xml
+++ b/app/src/main/res/drawable/bg_solid_corner_red.xml
@@ -3,8 +3,8 @@
     <corners android:radius="5dp"></corners>
     <stroke
         android:width="2px"
-        android:color="@color/color_red_light"></stroke>
+        android:color="@color/colorPrimaryDark"></stroke>
     <solid
-        android:color="@color/color_red_light"
+        android:color="@color/colorPrimaryDark"
         />
 </shape>
