--- a/app/src/main/res/drawable/bg_solid_corner_white.xml
+++ b/app/src/main/res/drawable/bg_solid_corner_white.xml
@@ -3,6 +3,6 @@
     <corners android:radius="5dp"></corners>
     <stroke
         android:width="1px"
-        android:color="#ebebeb"></stroke>
+        android:color="@color/color_list_item"></stroke>
     <solid android:color="@color/color_f6f2ed" />
 </shape>
