--- a/app/src/main/res/drawable/dialog_hint_text_bg.xml
+++ b/app/src/main/res/drawable/dialog_hint_text_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/color_red_light" />
+    <solid android:color="@color/colorPrimaryDark" />
 
 
     <corners
