--- a/app/src/main/res/drawable/seekbar_thumb.xml
+++ b/app/src/main/res/drawable/seekbar_thumb.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/color_red_light" />
+    <solid android:color="@color/colorPrimaryDark" />
 
     <size
         android:width="12dp"
