--- a/app/src/main/res/layout/dialog_slide_settings.xml
+++ b/app/src/main/res/layout/dialog_slide_settings.xml
@@ -119,7 +119,7 @@
                     android:background="@drawable/bg_hollow_corner_red"
                     android:gravity="center"
                     android:text="3s"
-                    android:textColor="@color/color_red_light"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="15sp" />
             </LinearLayout>
 
@@ -153,7 +153,7 @@
                     android:background="@drawable/bg_hollow_corner_red"
                     android:gravity="center"
                     android:text="8s"
-                    android:textColor="@color/color_red_light"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="15sp" />
             </LinearLayout>
         </LinearLayout>
@@ -185,7 +185,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="30分钟"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="17sp" />
     </LinearLayout>
 
@@ -273,7 +273,7 @@
             android:layout_weight="1"
             android:background="@drawable/alertdialog_right_selector"
             android:gravity="center"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
