--- a/app/src/main/res/drawable/corner_remote_view_btn.xml
+++ b/app/src/main/res/drawable/corner_remote_view_btn.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/color_fd7a40" />
+    <solid android:color="@color/colorPrimary" />
     <corners android:radius="5dp" /> //背景色
 
     <stroke
         android:width="1dp"
-        android:color="@color/color_fd7a40"  />
+        android:color="@color/colorPrimary"  />
 
     <padding
         android:bottom="1dp"
