--- a/app/src/main/res/drawable/corner_remote_view_click.xml
+++ b/app/src/main/res/drawable/corner_remote_view_click.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#f8f6f1" />
+    <solid android:color="@color/colorPrimaryDark" />
     <corners android:radius="5dp" /> //背景色
 
     <stroke
         android:width="1dp"
-        android:color="#fd7a40"  />
+        android:color="@color/colorPrimaryDark"  />
 
     <padding
         android:bottom="1dp"
