--- a/app/src/main/res/layout/dialog_loading_progress.xml
+++ b/app/src/main/res/layout/dialog_loading_progress.xml
@@ -15,7 +15,7 @@
         android:text="0%"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/color_red_light"
+        android:textColor="@color/colorPrimaryDark"
         />
 
     <TextView
