--- a/app/src/main/res/layout/common_hotsdialog.xml
+++ b/app/src/main/res/layout/common_hotsdialog.xml
@@ -70,7 +70,7 @@
             android:layout_weight="1"
             android:background="@drawable/alertdialog_right_selector"
             android:gravity="center"
-            android:textColor="@color/color_red_light"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"/>
 
     </LinearLayout>
