--- a/app/src/main/res/layout/item_ticket_layout.xml
+++ b/app/src/main/res/layout/item_ticket_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
+    android:paddingBottom="10dp"
     android:orientation="horizontal">
     <ImageView
         android:id="@+id/iv_left"
