--- a/app/src/main/res/layout/welcome_set_text_layout.xml
+++ b/app/src/main/res/layout/welcome_set_text_layout.xml
@@ -7,6 +7,7 @@
         android:id="@+id/head_layout"
         layout="@layout/layout_head_title"/>
     <EditText
+        android:layout_marginTop="15dp"
         android:id="@+id/greeting"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
