--- a/app/src/main/res/layout/welcome_set_text_new_layout.xml
+++ b/app/src/main/res/layout/welcome_set_text_new_layout.xml
@@ -25,9 +25,30 @@
         android:layout_height="80dp" />
 
     <RelativeLayout
+        android:id="@+id/default_word_la"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/greeting">
+
+        <CheckBox
+            android:layout_centerInParent="true"
+            android:id="@+id/is_default_word"
+            android:textSize="14sp"
+            android:textColor="@color/app_text_type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="上海"
+            />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/text_la"
         android:layout_width="match_parent"
-        android:layout_below="@id/greeting"
+        android:layout_below="@id/default_word_la"
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
