--- a/app/src/main/res/layout/item_room_service.xml
+++ b/app/src/main/res/layout/item_room_service.xml
@@ -48,6 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/tv_wel_playing"
                     android:paddingLeft="7dp"
                     android:textSize="13sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -130,7 +131,14 @@
                     android:text="推荐菜"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-
+                <TextView
+                    android:id="@+id/tv_recommend_playing"
+                    android:paddingLeft="7dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="投屏中"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
             <LinearLayout
                 android:gravity="center_vertical"
